Added new compiled versions: Ubuntu and Fedora
Added screen previews of directories and compressed files
Added flash support on screen previews
Added ZX Desktop icons for TSConf, Baseconf
Added show current AY Player song playing on console <-- TODO fix this description
Added PCW colour modes
Added another toy ZXLife to a new menu Procrastinate
Added compilation os release info, running os info

Improved Text Adventure features:
- Added location description texto to image, using AI <-- TODO fix this description
- Added configuration setting for char filter
- Added configuration settings for Text Adventure Map: follow, show unvisited, show unconnected, show objects, show pictures, zoom level
- Preserve zoom level on Text Adventure Map when loading games

Improved ZX Vision
- Allow to render only changed pixels (so it speeds up render). Internal flag: dirty_user_must_draw_contents
- Added more utf-8 characters (ï)
- Added action to put windows in cascade
- Process switcher can be set to immutable, so massive actions on menu Windows, like minimize all, cascade, etc, don't affect it

Improved ZX Desktop
- When switching to full screen and disable ZX Desktop, windows are restored after disabling full screen
- Allow to disable border and footer when switching to full screen


Improved ZX Spectrum Next emulation:
- Allow to boot NextZXOS v2.07l
- Updated machine id list

Fixed ZX Vision relocation windows
Fixed memory leak error when drawing aventure map
Fixed error when no permissions writing to mmc, ide, trd, dsk, hilow: disable persistent writes when it happens
Fixed permissions when installing ZEsarUX on Linux: zxuno.flash and tbblue.mmc are now writable by anyone

* As always, there are some other minor bugfixes and improvements

----------------------------------------


Version 10.3 - La Abadia del Crimen edition. 10 May 2023

There are lots of changes in this version, but some of them are remarkable:
- Added machines Amstrad PCW 8256, PCW 8512, CPC 6128, CPC 664